WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228282
[iOS] Page background color does not update after UIUserInterfaceLevel change
https://bugs.webkit.org/show_bug.cgi?id=228282
Summary
[iOS] Page background color does not update after UIUserInterfaceLevel change
Aditya Keerthi
Reported
2021-07-26 09:11:32 PDT
...
Attachments
Patch
(11.08 KB, patch)
2021-07-26 09:14 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-07-26 09:11:54 PDT
rdar://80490391
Aditya Keerthi
Comment 2
2021-07-26 09:14:01 PDT
Created
attachment 434209
[details]
Patch
Wenson Hsieh
Comment 3
2021-07-26 09:19:01 PDT
Comment on
attachment 434209
[details]
Patch r=mews
Aditya Keerthi
Comment 4
2021-07-26 11:56:24 PDT
Thanks for the review!
EWS
Comment 5
2021-07-26 12:18:16 PDT
Committed
r280306
(
239956@main
): <
https://commits.webkit.org/239956@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434209
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug